# Polar_ConsumerNews

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  config.yaml  e2e_demo.py  pyproject.toml  quote_test.py  verify_x.py
.github/workflows/: collect.yml  publish.yml
fixtures/: sample_posts.json
src/xbot/: __init__.py  cli.py  config.py  models.py  orchestrator.py  textsim.py
src/xbot/commentary/: __init__.py  generate.py  qa.py  reply.py  safety.py
src/xbot/dedup/: __init__.py  dedup.py
src/xbot/ingest/: __init__.py  adapter.py  api_source.py  normalize.py  sample_source.py
src/xbot/publish/: __init__.py  api_publisher.py  dryrun.py  publisher.py
src/xbot/score/: __init__.py  ranker.py  signals.py  teaching_judge.py
src/xbot/select/: __init__.py  reply_targets.py  rules.py
src/xbot/storage/: __init__.py  repo.py  sqlite_repo.py  turso_repo.py
tests/: test_publish_due.py  test_reply_safety.py  test_reply_scan.py  test_safety.py  test_signals.py
