[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xbot"
version = "0.1.0"
description = "X/Twitter quote-tweet curator bot — finds viral consumer-app content skills and quote-tweets them with compact, growth-first commentary."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6",
]

[project.optional-dependencies]
# Only needed once you wire live services. The dry-run pipeline runs on stdlib + pyyaml alone.
llm = ["anthropic>=0.40", "openai>=1.40"]   # openai client also talks to xAI/Grok (OpenAI-compatible)
x = ["httpx>=0.27", "requests-oauthlib>=2.0"]
turso = ["libsql-client>=0.3"]
dev = ["pytest>=8"]

[project.scripts]
xbot = "xbot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
